# boids

./: Cargo.toml  README.md
config/: display.ron  input.ron
resources/sprites/: boids.ron  obstacle.ron
src/: input.rs  main.rs  state.rs
src/components/: boids.rs  mod.rs  physics.rs
src/entities/: boids.rs
src/resources/: sprite_cache.rs
src/systems/: boids.rs  mod.rs  mouse.rs  physics.rs
