[package]
name = "boids"
version = "0.0.1"
authors = ["Ricardo Delfin <me@rdelfin.com>"]
edition = "2018"

[dependencies]
amethyst = "0.15.0"
anyhow = "1.0.31"
log = { version = "0.4.8", features = ["serde"] }
nalgebra = "0.19.0"
tuple-map = "0.4.0"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
