[package]
name = "boids"
version = "0.0.1"
authors = ["Ricardo Delfin <me@rdelfin.com>"]
edition = "2018"

[dependencies]
amethyst = "0.15"
anyhow = "1.0"
itertools = "0.10"
log = { version = "0.4", features = ["serde"] }
nalgebra = "0.19"
rand = "0.8"
serde = "1.0"
specs-derive = "0.4"
tuple-map = "0.4"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
